Fixed menu behaviour on mobile.

--- a/content/media/css/application.css
+++ b/content/media/css/application.css
@@ -7,6 +7,10 @@ body {
   padding-top: 50px;
 }
 
+.navbar-nav>li {
+float: left;
+}
+
 /* Utility class for vertical alignment */
 .vcenter {
   float:none;
